<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, ReminderAppActivity!</string>
    <string name="app_name">ReminderApp</string>
    <string name="goto_home">gotoHomeScreen</string>
    <string name="reminder_title_lbl">What</string>
    <string name="reminder_start_lbl">When</string>
    <string name="reminder_end_lbl">Ends</string>
    <string name="repeats_lbl">Repeats</string>
    <string name="repeat_none">Once</string>
    <string name="repeat_daily">Daily</string>
    <string name="repeat_hourly">Hourly</string>
    <string name="repeat_weekly">Weekly</string>
    <string name="repeat_monthly">Monthly</string>
    <string name="repeat_monthly_by_week">Monthly, by week number</string>
    <string name="dismiss">Dismiss</string>
    <string name="delete">Delete</string>

    <string-array name="repeats_types">
        <item>@string/repeat_none</item>
        <item>@string/repeat_hourly</item>
        <item>@string/repeat_daily</item>
        <item>@string/repeat_weekly</item>
        <item>@string/repeat_monthly</item>
        <item>@string/repeat_monthly_by_week</item>
    </string-array>

    <string name="sch_type_prompt">Repeats...</string>
    <string name="week_num_prompt">Select week</string>
    <string name="dow_prompt">Select day</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
    <string name="fourth">Fourth</string>
    <string name="last">Last</string>

    <string-array name="week_num">
        <item>@string/first</item>
        <item>@string/second</item>
        <item>@string/third</item>
        <item>@string/fourth</item>
        <item>@string/last</item>
    </string-array>
    <string name="set_reminder">Add reminder</string>
    <string name="notifications">Notifications</string>
    <color name="info_panel_bg">#336699</color>

</resources>